--- a/.gitignore
+++ b/.gitignore
@@ -99,3 +99,12 @@ ENV/
 
 # mypy
 .mypy_cache/
+
+#other
+.idea/workspace.xml
+data-processing/\.idea/workspace\.xml
+
+web-app/\.idea/workspace\.xml
+
+\.idea/
+/.idea
